[gd_scene load_steps=4 format=3 uid="uid://evm2dflv043"]

[ext_resource type="Script" path="res://recipes/craft_ui.gd" id="1_op6tb"]
[ext_resource type="FontFile" uid="uid://b3l1vf8q6clbj" path="res://fonts/BlockBlueprint.ttf" id="1_waa7l"]

[sub_resource type="LabelSettings" id="LabelSettings_vusxq"]
font = ExtResource("1_waa7l")
font_size = 48

[node name="CraftUI" type="CanvasLayer"]
script = ExtResource("1_op6tb")

[node name="UIRoot" type="Node2D" parent="."]
position = Vector2(1920, 0)

[node name="PanelContainer" type="PanelContainer" parent="UIRoot"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -685.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 905.0
grow_horizontal = 0

[node name="CraftContainer" type="VBoxContainer" parent="UIRoot/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/PanelContainer/CraftContainer"]
layout_mode = 2
text = "Crafting"
label_settings = SubResource("LabelSettings_vusxq")
horizontal_alignment = 1

[node name="RecipesContainer" type="ScrollContainer" parent="UIRoot/PanelContainer/CraftContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="RecipesList" type="VBoxContainer" parent="UIRoot/PanelContainer/CraftContainer/RecipesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16
